[project]
name = "openai-api-agent-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "fastmcp>=2.12.3",
    "jinja2>=3.1.6",
    "json5>=0.12.1",
    "openai>=1.102.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.65",
    "httpx>=0.27.0",
]
